not done but...

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>Hangman Game</h1>
       <p>Simply press a letter key to guess the word.</p>
       <div id="placeHolder"></div>
-      <p><a class="btn btn-primary btn-lg">New Game</a></p>
+      <p><a id="newGame" class="btn btn-primary btn-lg">New Game</a></p>
       <div class="row">
       <div class="col-lg-3">
           <h3>Picks Left</h3>
